--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Prioritization of Feline GWAS genes
 Version: 1.0.0.0
 Authors@R: 
     person("Arby", "Abood", , "aa9gj@virginia.edu", role = c("aut", "cre"))
-Description: Prioritization of Feline GWAS genes using OpenTargets, TWAS-hub and IMPC data.
+Description: Prioritization of GWAS genes using OpenTargets, TWAS-hub and IMPC data.
             The data has been prepared outside the package (see documentation) and are loaded internally within this package for portability. 
 License: use_mit_license()
 Encoding: UTF-8
